--- a/assets/components/header.html
+++ b/assets/components/header.html
@@ -23,7 +23,7 @@
           <span class="navbar-label">Agents</span>
         </a>
       </li>
-      <li class="active">
+      <li class="">
         <a href="">
           <span class="material-icons navbar-icon">dashboard</span>
           <span class="navbar-label">Dashboard</span>
