--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-
 table.custom-table * {
   border: none !important;
   border-collapse: separate;
@@ -21,118 +20,134 @@ table.custom-table::-webkit-scrollbar-track {
 
 /* Handle */
 table.custom-table::-webkit-scrollbar-thumb {
-  background: #8EB8A9;
+  background: #8eb8a9;
   border-radius: 10px;
 }
 
-header .brand-icon{
+header .brand-icon {
+  display: none;
+  margin: 0.5rem auto;
+}
+
+header .toggle-menu button {
+  display: none;
+}
+
+@media screen and (max-width: 1200px) {
+  header .toggle-menu button {
+    display: inline-block;
+    margin-right: 1rem;
+  }
+
+  aside {
     display: none;
-    margin: .5rem auto;
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    width: 90%;
+    height: 100vh;
+    padding: 0 1rem;
+    box-shadow: 40px 0 80px rgb(0 0 0 / 10%);
+  }
+
+  main .content {
+    width: 100%;
+  }
 }
 
-header .toggle-menu button{
+@media screen and (max-width: 996.67px) {
+  main {
+    padding-top: 100px;
+  }
+
+  main .content {
+    padding: 0 1rem 0.25rem;
+    margin-top: 1rem;
+    padding-bottom: 1.5rem;
+  }
+
+  header .main-nav .navbar-icon {
+    display: block;
+  }
+
+  .navbar-label {
     display: none;
+  }
+
+  header {
+    padding: 1rem 1rem 0.25rem 1rem;
+  }
+
+  header .main-nav > ul > li {
+    padding: 0 1rem;
+    height: 44px;
+  }
+
+  header .main-nav > ul > li .btn.btn-primary {
+    background-color: transparent !important;
+    border-color: transparent !important;
+    padding: 0 !important;
+  }
+
+  header .main-nav > ul > li > a,
+  header .main-nav > ul > li > .dropdown > .dashboard {
+    font-size: 1.5625rem !important;
+  }
+
+  header .main-nav > ul > li > a:not(button) {
+    position: relative;
+    top: 0.25rem;
+  }
+
+  header .main-nav > ul > li > .dropdown > .dashboard {
+    vertical-align: sub;
+  }
 }
 
-@media screen and (max-width: 1200px){
-    header .toggle-menu button{
-        display: inline-block;
-        margin-right: 1rem;
-    }
+@media screen and (max-width: 768px) {
+  main {
+    padding-top: 125px;
+  }
 
-    aside{
-        display: none;
-        position: fixed;
-        z-index: 99;
-        top: 0;
-        left: 0;
-        width: 90%;
-        height: 100vh;
-        padding: 0 1rem;
-        box-shadow: 40px 0 80px rgb(0 0 0 / 10%);
-    }
+  header .brand-icon {
+    display: block;
+    text-align: center;
+  }
 
-    main .content{
-        width: 100%;
-    }
+  header .brand-icon img {
+    width: 150px;
+  }
+
+  header .toggle-brand-icon {
+    display: none;
+  }
+
+  header .toggle-menu button {
+    margin-right: 0.25rem;
+  }
+
+  header .main-nav > ul > li {
+    padding: 0 0.75rem;
+  }
 }
 
-@media screen and (max-width: 996.67px){
-    main{
-        padding-top: 100px;
-    }
-
-    main .content{
-        padding: 0 1rem .25rem;
-    }
-
-    header .main-nav .navbar-icon{
-        display: block;
-    }
-
-    .navbar-label{
-        display: none;
-    }
-
-    header{
-        padding: 1rem 1rem .25rem 1rem;
-    }
-
-    header .main-nav > ul > li{
-        padding: 0 1rem;
-        height: 44px;
-    }
-
-    header .main-nav > ul > li .btn.btn-primary{
-        background-color: transparent !important;
-        border-color: transparent !important;
-        padding: 0 !important;
-    }
-
-    header .main-nav > ul > li > a,
-    header .main-nav > ul > li > .dropdown > .dashboard{
-        font-size: 1.5625rem !important;
-    }
-
-    header .main-nav > ul > li > a:not(button){
-        position: relative;
-        top: .25rem;
-    }
-
-    header .main-nav > ul > li > .dropdown > .dashboard{
-        vertical-align: sub;
-    }
+@media screen and (max-width: 375px) {
+  header .main-nav > ul > li {
+    padding: 0 0.625rem;
+  }
 }
 
-@media screen and (max-width: 768px){
-    main{
-        padding-top: 125px;
-    }
-
-    header .brand-icon{
-        display: block;
-        text-align: center;
-    }
-
-    header .brand-icon img{
-        width: 150px;
-    }
-
-    header .toggle-brand-icon{
-        display: none;
-    }
-
-    header .toggle-menu button{
-        margin-right: .25rem;
-    }
-
-    header .main-nav > ul > li{
-        padding: 0 .75rem;
-    }
-}
-
-@media screen and (max-width: 375px){
-    header .main-nav > ul > li{
-        padding: 0 .625rem;
-    }
+@media screen and (max-width: 996.67px) {
+  .filter-dropdown-menu {
+    width: 100vw;
+    left: 0 !important;
+    height: 100vh !important;
+    overflow-y: scroll !important;
+    /* bottom: 0 !important; */
+    top: 0 !important;
+    position: fixed !important;
+    transform: translate(1rem, 0) !important;
+    margin-left: 1rem !important;
+  }
 }
